From ucommon 0.5.0 to 0.5.1
- detached & pooled thread exit support fixed

From ucommon 0.4.0 to 0.5.0
- rwlock now also recursive writers
- clarification of conditional locking
- generic rexlock type replaces recursive mutex

Initial Release 0.4.0
