@@ -1,8 +1,8 @@
 AC_INIT(autogen.sh)
 
-VERSION="0.5.0"
+VERSION="0.5.1"
 LT_RELEASE="0.5"
-LT_VERSION="0:0"
+LT_VERSION="0:1"
 
 AC_CONFIG_AUX_DIR(autoconf)
 AC_CANONICAL_SYSTEM
