@@ -275,6 +275,8 @@ public:
 	static struct addrinfo *gethint(SOCKET so, struct addrinfo *h);
 	static socklen_t getaddr(SOCKET so, struct sockaddr_storage *addr, const char *host, const char *svc);
 	static socklen_t getlen(struct sockaddr *addr);
+	static bool equal(struct sockaddr *s1, struct sockaddr *s2);
+	static void getinterface(struct sockaddr *iface, struct sockaddr *dest);
 };
 
 class __EXPORT ListenSocket : protected Socket
