@@ -1,5 +1,7 @@
 From ucommon 0.5.0 to 0.5.1
 - detached & pooled thread exit support fixed
+- equal test for socket address
+- getinterface to find interface to destination address
 
 From ucommon 0.4.0 to 0.5.0
 - rwlock now also recursive writers
